// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Callout component > snapshots > should match snapshot for notice type 1`] = `
<div>
  <div
    class="flex items-center w-full bg-green bg-opacity-10 p-4 pr-6 border border-gray-200 rounded shadow-sm dark:bg-green dark:border-gray-500"
  >
    <svg
      class="block w-32 h-32 mr-6"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9.97308 18H14.0269C14.1589 16.7984 14.7721 15.8065 15.7676 14.7226C15.8797 14.6006 16.5988 13.8564 16.6841 13.7501C17.5318 12.6931 18 11.385 18 10C18 6.68629 15.3137 4 12 4C8.68629 4 6 6.68629 6 10C6 11.3843 6.46774 12.6917 7.31462 13.7484C7.40004 13.855 8.12081 14.6012 8.23154 14.7218C9.22766 15.8064 9.84103 16.7984 9.97308 18ZM14 20H10V21H14V20ZM5.75395 14.9992C4.65645 13.6297 4 11.8915 4 10C4 5.58172 7.58172 2 12 2C16.4183 2 20 5.58172 20 10C20 11.8925 19.3428 13.6315 18.2443 15.0014C17.624 15.7748 16 17 16 18.5V21C16 22.1046 15.1046 23 14 23H10C8.89543 23 8 22.1046 8 21V18.5C8 17 6.37458 15.7736 5.75395 14.9992ZM13 10.0048H15.5L11 16.0048V12.0048H8.5L13 6V10.0048Z"
      />
    </svg>
    <div
      class="max-w-none prose dark:prose-dark"
    >
      Notice snapshot content
    </div>
  </div>
</div>
`;

exports[`Callout component > snapshots > should match snapshot for warning type 1`] = `
<div>
  <div
    class="flex items-center w-full bg-red bg-opacity-10 p-4 pr-6 border border-gray-200 rounded shadow-sm dark:bg-red dark:border-gray-500"
  >
    <svg
      class="block w-32 h-32 mr-6"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4.00001 20V14C4.00001 9.58172 7.58173 6 12 6C16.4183 6 20 9.58172 20 14V20H21V22H3.00001V20H4.00001ZM6.00001 20H18V14C18 10.6863 15.3137 8 12 8C8.6863 8 6.00001 10.6863 6.00001 14V20ZM11 2H13V5H11V2ZM19.7782 4.80761L21.1924 6.22183L19.0711 8.34315L17.6569 6.92893L19.7782 4.80761ZM2.80762 6.22183L4.22183 4.80761L6.34315 6.92893L4.92894 8.34315L2.80762 6.22183ZM7.00001 14C7.00001 11.2386 9.23858 9 12 9V11C10.3432 11 9.00001 12.3431 9.00001 14H7.00001Z"
      />
    </svg>
    <div
      class="max-w-none prose dark:prose-dark"
    >
      Warning snapshot content
    </div>
  </div>
</div>
`;
